Adding more files to related directories

--- a/angular-phonecat/app/home-page.template.html
+++ b/angular-phonecat/app/home-page.template.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title> Libreria Colegial </title>
-    <link rel="stylesheet" type="text/css" href="Css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css" />
 </head>
 
 <body>
