--- a/tienditaColegial/app/index.html
+++ b/tienditaColegial/app/index.html
@@ -13,10 +13,11 @@
     <script src="header/header.module.js"></script>
     <script src="header/header.component.js"></script>
 
+
   </head>
   <body>
 
-
+    <div ng-view></div>
 
   </body>
 </html>
