--- a/tienditaColegial/app/header/header.template.html
+++ b/tienditaColegial/app/header/header.template.html
@@ -1,27 +1,3 @@
-<header id="head">
-    <div class = "logo"> Libreria Colegial </div>
 
-    <div class = "link_box">
-
-        <a href = "#" > Cuenta </a>
-        <br/>
-        <a href = "#" > Carrito </a>
-
-    </div>
-
-</header>
-
-<nav>
-    <ul>
-
-        <li>  Home </li>
-        <li>  Libros </li>
-        <li>  Ropa    </li>
-        <li>  Articulos escolares</li>
-        <li>  Contactanos  </li>
-        <li class="search">
-            <input type="text" id="search_input" name="search_input" value="Search" required />
-            <input type="button" name="search_button" id="search_button" value="" required />
-        </li>
-    </ul>
-</nav>
+<p>{{$ctrl.controllerMessage}}</p>
+<p>jcbuibcuibkbckjndjkc</p>
