--- a/tienditaColegial/app/header/header.template.html
+++ b/tienditaColegial/app/header/header.template.html
@@ -1,3 +1,3 @@
 
-<p>{{$ctrl.controllerMessage}}</p>
-<p>jcbuibcuibkbckjndjkc</p>
+<p ng-controller="myController">{{blablabla}} cuwibcuiwbciwbc</p>
+<p ng-controller="myController2">{{blablabla2}}</p>
