Se importaron todos los modulos

--- a/tienditaColegial/app/index.html
+++ b/tienditaColegial/app/index.html
@@ -5,13 +5,39 @@
     <title>Tiendita Colegial </title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="app.css" />
-      <link rel="stylesheet" type="text/css" href="CSS/styles.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css" />
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
+
+    <script src="account/account.module.js"></script>
+    <script src="account/account.component.js"></script>
+
+    <script src="articles/articles.module.js"></script>
+    <script src="articles/articles.component.js"></script>
+
+    <script src="books/books.module.js"></script>
+    <script src="books/books.component.js"></script>
+
+    <script src="cart/cart.module.js"></script>
+    <script src="cart/cart.component.js"></script>
+
+    <script src="contact/contact.js"></script>
+    <script src="contact/contact.component.js"></script>
+
     <script src="header/header.module.js"></script>
     <script src="header/header.component.js"></script>
+
+    <script src="home-page/home-page.module.js"></script>
+    <script src="home-page/home-page.component.js"></script>
+
+    <script src="ropa/ropa.module.js"></script>
+    <script src="ropa/ropa.component.js"></script>
+
+    <script src="sign-in/sign-in.module.js"></script>
+    <script src="sign-in/sign-in.component.js"></script>
+
 
 
   </head>
