Se arreglo EL NAv Bar y el Css

--- a/tienditaColegial/app/header/header.template.html
+++ b/tienditaColegial/app/header/header.template.html
@@ -1,3 +1,30 @@
 
-<p ng-controller="myController">{{blablabla}} cuwibcuiwbciwbc</p>
-<p ng-controller="myController2">{{blablabla2}}</p>
+
+<div class = "main-body">
+
+   <div class = "head">
+    <div class = "logo"> Libreria Colegial </div>
+
+    <div class = "link_box">
+
+        <a href = "#" > Cuenta </a>
+        <br/>
+        <a href = "#" > Carrito </a>
+
+    </div>
+  </div>
+<nav>
+    <ul>
+
+        <li>  Home </li>
+        <li>  <a href = "books" >Libros</a> </li>
+        <li>  Ropa    </li>
+        <li>  Articulos escolares</li>
+        <li>  Contactanos  </li>
+        <li class="search">
+            <input type="text" id="search_input" name="search_input" value="Search" required />
+            <input type="button" name="search_button" id="search_button" value="" required />
+        </li>
+    </ul>
+</nav>
+</div>
