--- a/tienditaColegial/app/index.html
+++ b/tienditaColegial/app/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Tiendita Colegial </title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="app.css" />
+    <!-- <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" /> -->
+    <!--<link rel="stylesheet" href="app.css" /> -->
     <link rel="stylesheet" type="text/css" href="CSS/styles.css" />
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
@@ -23,7 +23,7 @@
     <script src="cart/cart.module.js"></script>
     <script src="cart/cart.component.js"></script>
 
-    <script src="contact/contact.js"></script>
+    <script src="contact/contact.modulejs"></script>
     <script src="contact/contact.component.js"></script>
 
     <script src="header/header.module.js"></script>
