--- a/tienditaColegial/app/header/header.template.html
+++ b/tienditaColegial/app/header/header.template.html
@@ -5,20 +5,20 @@
 
     <div class = "link_box">
 
-      <a href = "account" > Cuenta </a>
+      <a href = "#!/account" > Cuenta </a>
       <br/>
-      <a href = "cart" > Carrito </a>
+      <a href = "#!/cart" > Carrito </a>
 
     </div>
   </div>
   <nav>
     <ul>
 
-      <li>  <a href = "home-page/home-page.template.html" > Home </a> </li>
-      <li>  <a href = "books/books.template.html" > Libros</a> </li>
-      <li>  <a href = "ropa" > Ropa   </a> </li>
-      <li>  <a href = "articles" >Articulos escolares </a></li>
-      <li>  <a href = "contact" > Contactanos </a> </li>
+      <li>  <a href = "#!/home-page" > Home </a> </li>
+      <li>  <a href = "#!/books" > Libros</a> </li>
+      <li>  <a href = "#!/ropa" > Ropa   </a> </li>
+      <li>  <a href = "#!/articles" >Articulos escolares </a></li>
+      <li>  <a href = "#!/contact" > Contactanos </a> </li>
       <li class="search">
         <input type="text" id="search_input" name="search_input" value="Search" required />
         <input type="button" name="search_button" id="search_button" value="" required />
