Fixing header issue

--- a/tienditaColegial/app/index.html
+++ b/tienditaColegial/app/index.html
@@ -43,6 +43,7 @@
   </head>
   <body>
 
+    <header></header>//THIS IS A CUSTOM COMPONENT NOT AN HTML ATTRIBUTE!!!!!!!! DO NOT DELETE!!!!!
     <div ng-view></div>
 
   </body>
