Se termino EL Routing

--- a/tienditaColegial/app/books/books.template.html
+++ b/tienditaColegial/app/books/books.template.html
@@ -1,2 +1,5 @@
 
-<p ng-controller="booksController">{{booksMessage}}</p>
+<!--<p ng-controller="booksController">{{booksMessage}}</p> -->
+
+
+<h1> Books </h1>
