Se le anadio el footer

--- a/tienditaColegial/app/index.html
+++ b/tienditaColegial/app/index.html
@@ -38,13 +38,19 @@
     <script src="sign-in/sign-in.module.js"></script>
     <script src="sign-in/sign-in.component.js"></script>
 
+    <script src="footer-nav/footer-nav.module.js"></script>
+    <script src="footer-nav/footer-nav.component.js"></script>
+
 
 
   </head>
   <body>
 
-    <header></header>//THIS IS A CUSTOM COMPONENT NOT AN HTML ATTRIBUTE!!!!!!!! DO NOT DELETE!!!!!
+    <header></header><!--THIS IS A CUSTOM COMPONENT NOT AN HTML ATTRIBUTE!!!!!!!! DO NOT DELETE!!!!!-->
     <div ng-view></div>
+
+    <footer-nav></footer-nav>
+
 
   </body>
 </html>
