Se arreglo los colores de los links

--- a/tienditaColegial/app/header/header.template.html
+++ b/tienditaColegial/app/header/header.template.html
@@ -5,9 +5,9 @@
 
     <div class = "link_box">
 
-      <a href = "#!/account" > Cuenta </a>
+      <a href = "#!/account" class="green-link"> Cuenta </a>
       <br/>
-      <a href = "#!/cart" > Carrito </a>
+      <a href = "#!/cart" class="green-link"> Carrito </a>
 
     </div>
   </div>
