aregle el footer

--- a/tienditaColegial/app/footer-nav/footer-nav.template.html
+++ b/tienditaColegial/app/footer-nav/footer-nav.template.html
@@ -1,10 +1,33 @@
 <div class = "footer-nav">
-    <ul>
+    <div class = "footer-first-menu">
 
+    <ul>
+        <li> Categorias: </li>
         <li>  <a href = "#!/home-page" > Home </a> </li>
         <li>  <a href = "#!/books" > Libros</a> </li>
         <li>  <a href = "#!/ropa" > Ropa   </a> </li>
         <li>  <a href = "#!/articles" >Articulos escolares </a></li>
         <li>  <a href = "#!/contact" > Contactanos </a> </li>
     </ul>
+    </div>
+
+    <div class = "informacion">
+
+        <p> Localizanos: </p>
+        <p> Dirección Postal:
+
+            Recinto Universitario de Mayagüez
+            PO Box 9000
+            Mayagüez, PR 00681-9000 </p>
+    </div>
+
+    <div class = "footer-account">
+        <ul>
+            <li><a href = "#!/account" > Accesa tu cuenta </a></li>
+            <li><a href = "#!/cart" > Carrito </a></li>
+        </ul>
+    </div>
+    <div>
+        <img class = "footer-logo" src = "images/UPRM-Library-home.jpg" height="150" width = "350">
+    </div>
 </div>
