--- a/tienditaColegial/app/header/header.template.html
+++ b/tienditaColegial/app/header/header.template.html
@@ -14,7 +14,7 @@
   <nav>
     <ul>
 
-      <li>  <a href = "#!/home-page" > Home </a> </li>
+      <li>  <a href = "#!/home-page" > Inicio </a> </li>
       <li>  <a href = "#!/books" > Libros</a> </li>
       <li>  <a href = "#!/ropa" > Ropa   </a> </li>
       <li>  <a href = "#!/articles" >Articulos escolares </a></li>
