--- a/tienditaColegial/app/home-page/home-page.template.html
+++ b/tienditaColegial/app/home-page/home-page.template.html
@@ -1,3 +1,8 @@
-<h1> Home </h1>
+<h1> Inicio </h1>
+
+<img class = "home-image" src = "images/Inicio-Banner.jpg" height = "450" with = 1200>
+
+<h2> Mas recientes </h2>
+<h2> Populares </h2>
 
 
