--- a/tienditaColegial/app/header/header.template.html
+++ b/tienditaColegial/app/header/header.template.html
@@ -7,11 +7,11 @@
       </h2>
       <span flex=""></span>
 
-      <md-button aria-label="Iniciar_Sesion">
+      <md-button href = "#!/account" aria-label="Iniciar_Sesion">
         <!--<md-icon md-svg-icon="img/icons/favorite.svg" style="color: greenyellow;"></md-icon>-->
         CUENTA
       </md-button>
-      <md-button aria-label="Register">
+      <md-button href = "#!/cart" aria-label="Register">
         <!--<md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>-->
         CARRITO
       </md-button>
@@ -26,10 +26,11 @@
 <div ng-cloak="" class="navBar" ng>
   <md-content class="navPadding">
     <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
-      <md-nav-item md-nav-click="goto('page1')" name="page1">Libros</md-nav-item>
-      <md-nav-item md-nav-click="goto('page2')" name="page2">Ropa</md-nav-item>
-      <md-nav-item md-nav-click="goto('page3')" name="page3">Articulos Escolares</md-nav-item>
-      <md-nav-item md-nav-click="goto('page4')" name="page4">Contactos</md-nav-item>
+      <md-nav-item md-nav-href= "#!/home-page" name="home-page">Inicio </md-nav-item>
+      <md-nav-item md-nav-href= "#!/books" name="libros">Libros</md-nav-item>
+      <md-nav-item md-nav-href= "#!/ropa" name="ropa">Ropa</md-nav-item>
+      <md-nav-item md-nav-href= "#!/articles" name="articles">Articulos Escolares</md-nav-item>
+      <md-nav-item md-nav-href= "#!/contact" name="contact">Contactos</md-nav-item>
 
       <!-- these require actual routing with ui-router or ng-route, so they won't work in the demo
       <md-nav-item md-nav-sref="app.page4" name="page4">Page Four</md-nav-item>
