Se routio todo el Angular Material

--- a/tienditaColegial/app/index.html
+++ b/tienditaColegial/app/index.html
@@ -133,7 +133,7 @@
     }]).config(function ($mdThemingProvider) {
         $mdThemingProvider.theme('default')
           .primaryPalette('green')
-          .accentPalette('grey');
+          .accentPalette('green');
 
 
     });
