Arregle el Home Banner Position y Routing

--- a/tienditaColegial/app/home-page/home-page.template.html
+++ b/tienditaColegial/app/home-page/home-page.template.html
@@ -1,6 +1,6 @@
 <h1> Inicio </h1>
 
-<img class = "home-image" src = "images/Inicio-Banner.jpg" height = "450" with = 1200>
+<img class = "home-image" src = "images/Inicio-Banner.jpg" height = "450" with = "1100" >
 
 <h2> Mas recientes </h2>
 <h2> Populares </h2>
