Angular Material Updated

--- a/tienditaColegial/app/footer-nav/footer-nav.template.html
+++ b/tienditaColegial/app/footer-nav/footer-nav.template.html
@@ -1,8 +1,10 @@
-<div class = "footer-nav">
+<div>
+    <footer>
+
     <div class = "footer-first-menu">
 
     <ul>
-        <li> Categorias: </li>
+        <p> Categorias:</p>
         <li>  <a href = "#!/home-page" > Home </a> </li>
         <li>  <a href = "#!/books" > Libros</a> </li>
         <li>  <a href = "#!/ropa" > Ropa   </a> </li>
@@ -30,4 +32,5 @@
     <div>
         <img class = "footer-logo" src = "images/UPRM-Library-home.jpg" height="150" width = "350">
     </div>
+</footer>
 </div>
