--- a/tienditaColegial/app/header/header.template.html
+++ b/tienditaColegial/app/header/header.template.html
@@ -2,16 +2,16 @@
 <div layout="column" ng-cloak="" class="headerInfo">
   <md-toolbar class="headerToolbar">
     <div class="md-toolbar-tools">
-      <h2>
+      <h1>
         <span>LIBRERIA COLEGIAL</span>
-      </h2>
+      </h1>
       <span flex=""></span>
 
       <md-button href = "#!/account" aria-label="Iniciar_Sesion">
         <!--<md-icon md-svg-icon="img/icons/favorite.svg" style="color: greenyellow;"></md-icon>-->
         CUENTA
       </md-button>
-      <md-button href = "#!/cart" aria-label="Register">
+      <md-button href = "#!/cart" aria-label="cart">
         <!--<md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>-->
         CARRITO
       </md-button>
@@ -37,3 +37,5 @@
       <md-nav-item md-nav-href="#page5" name="page5">Page Five</md-nav-item>
       -->
     </md-nav-bar>
+    </md-content>
+  </div>
