--- a/tienditaColegial/app/index.html
+++ b/tienditaColegial/app/index.html
@@ -6,19 +6,12 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css"/>
     <link rel="stylesheet" href="app.css"/>
-   
-
-
-
-
-
 
 
   </head>
-  <body ng-app="tienditaColegial">
+  <body ng-app = "tienditaColegial">
 
-
-  <header></header>
+   <header></header>
   <div ng-view></div>
   <footer-nav> </footer-nav>
 
@@ -57,8 +50,8 @@
   <script src="sign-in/sign-in.module.js"></script>
   <script src="sign-in/sign-in.component.js"></script>
 
-  <script src="app.module.js"></script>
-  <script src="app.config.js"></script>
+  <script src="footer-nav/footer-nav.module.js"></script>
+  <script src="footer-nav/footer-nav.component.js"></script>
 
 
 
@@ -75,7 +68,8 @@
       'header',
       'home-page',
       'ropa',
-      'sign-in'
+      'sign-in',
+      'footer-nav'
     ]).config(['$locationProvider','$routeProvider',function ($locationProvider,$routeProvider) {
       $locationProvider.hashPrefix("!");
 
@@ -110,7 +104,8 @@
     }]).config(function ($mdThemingProvider) {
         $mdThemingProvider.theme('default')
           .primaryPalette('green')
-          .accentPalette('green');
+          .accentPalette('grey')
+          .backgroundPalette('green');
 
 
     });
