--- a/tienditaColegial/app/sign-in/sign-in.template.html
+++ b/tienditaColegial/app/sign-in/sign-in.template.html
@@ -1,8 +1,10 @@
-<h1>SIGN IN</h1>
+
 
 
   <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding="">
-    <div>
+
+    <h1>SIGN IN</h1>
+    <div flex>
       <md-input-container ng-controller="signInController" >
         <label>{{signInMessage}}</label>
         <input ng-model="user.title">
@@ -15,6 +17,12 @@
 
       <md-button> Sign In</md-button>
       <md-button>Register</md-button>
+
+
+    </div>
+
+    <div flex>
+
 
 
     </div>
