--- a/tienditaColegial/app/index.html
+++ b/tienditaColegial/app/index.html
@@ -119,8 +119,7 @@
     }]).config(function ($mdThemingProvider) {
         $mdThemingProvider.theme('default')
           .primaryPalette('green')
-          .accentPalette('grey')
-          .backgroundPalette('green');
+          .accentPalette('grey');
 
 
     });
