--- a/tienditaColegial/app/footer-nav/footer-nav.template.html
+++ b/tienditaColegial/app/footer-nav/footer-nav.template.html
@@ -4,33 +4,38 @@
     <div class = "footer-first-menu">
 
     <ul>
-        <p> Categorias:</p>
-        <li>  <a href = "#!/home-page" > Home </a> </li>
-        <li>  <a href = "#!/books" > Libros</a> </li>
-        <li>  <a href = "#!/ropa" > Ropa   </a> </li>
-        <li>  <a href = "#!/articles" >Articulos escolares </a></li>
-        <li>  <a href = "#!/contact" > Contactanos </a> </li>
+        <li>  <md-button href = "#!/home-page" >Home</md-button> </li>
+        <li>  <md-button href = "#!/books" >Libros</md-button> </li>
+        <li>  <md-button href = "#!/ropa" >Ropa</md-button> </li>
     </ul>
     </div>
 
-    <div class = "informacion">
+        <div class = "footer-second-menu">
+
+            <ul>
+
+                <li>  <md-button href = "#!/articles" >Articulos escolares</md-button></li>
+                <li>  <md-button href = "#!/contact" >Contactanos</md-button> </li>
+            </ul>
+        </div>
+
+
+
+        <div class = "informacion">
 
         <p> Localizanos: </p>
-        <p> Dirección Postal:
-
-            Recinto Universitario de Mayagüez
+        <p> Dirección Postal: Recinto Universitario de Mayagüez
             PO Box 9000
             Mayagüez, PR 00681-9000 </p>
     </div>
 
     <div class = "footer-account">
         <ul>
-            <li><a href = "#!/account" > Accesa tu cuenta </a></li>
-            <li><a href = "#!/cart" > Carrito </a></li>
+            <li><md-button href = "#!/account" aria-label="Iniciar_Sesion"> Cuenta </md-button></li>
+            <li><md-button href = "#!/cart" aria-label="Cart"> Carrito </md-button></li>
         </ul>
     </div>
-    <div>
-        <img class = "footer-logo" src = "images/UPRM-Library-home.jpg" height="150" width = "350">
-    </div>
+
 </footer>
+
 </div>
