--- a/tienditaColegial/app/header/header.template.html
+++ b/tienditaColegial/app/header/header.template.html
@@ -2,17 +2,18 @@
 <div layout="column" ng-cloak="" class="headerInfo">
   <md-toolbar class="headerToolbar">
     <div class="md-toolbar-tools">
+      <img src = "images/Bulldog-paw.jpg" height="40" length = "40"/>
       <h1>
         <span>LIBRERIA COLEGIAL</span>
       </h1>
       <span flex=""></span>
 
-      <md-button href = "#!/account" aria-label="Iniciar_Sesion">
-        <!--<md-icon md-svg-icon="img/icons/favorite.svg" style="color: greenyellow;"></md-icon>-->
+      <md-button href = "#!/account" aria-label="Iniciar_Sesion" style = "color" >
+
         CUENTA
       </md-button>
       <md-button href = "#!/cart" aria-label="cart">
-        <!--<md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>-->
+
         CARRITO
       </md-button>
     </div>
