--- a/tienditaColegial/app/home-page/home-page.template.html
+++ b/tienditaColegial/app/home-page/home-page.template.html
@@ -1,8 +1,33 @@
-<h1> Inicio </h1>
 
+<div class = "home-page">
+    <h1> Inicio </h1>
 <img class = "home-image" ng-src= "images/Inicio-Banner.jpg" height = "450" with = "1100" >
 
-<h2> Mas recientes: </h2>
-<h2> Populares: </h2>
+<div class = "recientes-fav" >
+
+    <a href = "#!/new-arrivals"> <img src=" images/Mas-recientes.jpg" class = "imagen-reciente" > </a>
+    <a href = "#!/top-sellers"> <img src=" images/mas-vendidos.jpg"class = "imagen-mas-vendidos" > </a>
+
+
+
+</div>
+    <div class = "libros-articulos" >
+        <a href = "#!/books"> <img src=" images/libros.jpg" class = "imagen-libros" > </a>
+        <a href = "#!/articles"> <img src=" images/Articulos.jpg"class = "imagen-articulos" > </a>
+</div>
+
+    <div >
+
+        <a href = "#!/ropa"> <img src=" images/Ropa.jpg"class = "home-page-ropa-banner" > </a>
+
+    </div>
+
+
+
+    </div>
+
+
+
+
 
 
