--- a/tienditaColegial/app/account-info/account-info.template.html
+++ b/tienditaColegial/app/account-info/account-info.template.html
@@ -1,26 +1,63 @@
+  <md-content layout="column" layout-padding="50px">
+    <md-whiteframe class="md-whiteframe-5dp">
+      <h1>Bienvenido a tu cuenta</h1>
+    </md-whiteframe>
+    <md-list>
+      <md-list-item>
+        <div>
+          <p><b>Nombre:</b></p>
+          <p>Fulano</p>
+        </div>
+        <md-button class="md-primary md-secondary md-raised">Editar</md-button>
+        <md-divider ng-if="!$last"></md-divider>
+
+      </md-list-item>
+
+      <md-list-item>
+        <div>
+          <p><b> Apellido:</b></p>
+          <p>De Tal</p>
+        </div>
+        <md-button class="md-primary md-secondary md-raised" layout-align="left">Editar</md-button>
+        <md-divider ng-if="!$last"></md-divider>
+      </md-list-item>
+
+      <md-list-item>
+        <div>
+          <p> <b>Email:</b></p>
+          <p>fulanodetal@gmail.com</p>
+        </div>
+        <md-button class="md-primary md-secondary md-raised"> Editar</md-button>
+        <md-divider ng-if="!$last"></md-divider>
+      </md-list-item>
+
+      <md-list-item>
+        <div>
+          <p><b>Numero de Telefono:</b></p>
+          <p>XXX-XXX-XXXX</p>
+        </div>
+        <md-button class="md-primary md-secondary md-raised"> Editar</md-button>
+        <md-divider ng-if="!$last"></md-divider>
+      </md-list-item>
 
 
+      <md-list-item>
+        <div>
+          <p><b>Metodo de Pago:</b></p>
+            <p>ATH</p>
+        </div>
+        <md-button class="md-primary md-secondary md-raised"> Editar</md-button>
+        <md-divider ng-if="!$last"></md-divider>
+      </md-list-item>
 
-
-<div layout-padding="100" ng-cloak>
-
-
-  <md-toolbar>
-    <h2 class="md-toolbar-tools">
-      <span>Mi Cuenta</span>
-    </h2>
-  </md-toolbar>
-
-  <md-content>
-    AQUI ESTA INFO DE CUENTA
-
+      <md-list-item>
+        <div>
+          <p><b> Contrasena:</b></p>
+          <p>XXXXXXXXXX</p>
+        </div>
+        <md-button class="md-primary md-secondary md-raised md-warn"> Editar Contrasena</md-button>
+        <md-divider ng-if="!$last"></md-divider>
+      </md-list-item>
+    </md-list>
   </md-content>
 
-
-
-
-
-
-
-
-</div>
