--- a/tienditaColegial/app/cart/cart.template.html
+++ b/tienditaColegial/app/cart/cart.template.html
@@ -3,7 +3,7 @@
 <md-content layout-gt-sm="row" layout-padding="">
 
     <div flex="15"></div>
-    <div flex="" ng-controller="cartController">
+    <div flex="" >
         <h2>Cart<span><hr></span></h2>
 
         <ngcart-cart></ngcart-cart>
@@ -11,9 +11,8 @@
         <h3>Checkout<span><hr></span></h3>
 
 
-        <div layout="row" layout-align="space-around center">
-            <h4>service 'log' <span> <ngcart-checkout service="log">Checkout</ngcart-checkout></span></h4>
-            <h4>service 'http' <span> <ngcart-checkout service="http" settings="httpSettings">Checkout </ngcart-checkout></span></h4>
+        <div layout="row" layout-align="space-around center" ng-controller="cartController">
+            <md-button class="md-primary md-raised" ng-disabled=checkCart() href = "#!/checkout">Checkout</md-button>
             <h4> PayPal<span><ngcart-checkout service="paypal" settings="payPalSettings"></ngcart-checkout></span></h4>
 
         </div>
@@ -31,7 +30,6 @@
         <button class="checkoutB" ng-click="checkout()" ng-disabled="!ngCart.getTotalItems()" ng-transclude>Checkout</button>
     </div>
 
-
     <div ng-if="service=='paypal'">
 
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" ng-show="ngCart.getTotalItems()">
@@ -44,8 +42,6 @@
             <input type="hidden" name="currency_code" value="{{ settings.paypal.currency_code }}">
             <input type="hidden" name="button_subtype" value="services">
             <input type="hidden" name="no_note" value="0">
-            <input type="hidden" name="tax_rate" value="{{ ngCart.getTaxRate()}}">
-            <input type="hidden" name="shipping" value="{{ ngCart.getShipping()}}">
             <input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHostedGuest">
             <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
@@ -68,7 +64,9 @@
             <tr>
                 <th></th>
                 <th></th>
+
                 <th>Quantity</th>
+
                 <th>Amount</th>
                 <th>Total</th>
             </tr>
@@ -77,20 +75,25 @@
             <tr>
                 <td></td><td></td>
                 <td></td>
+
                 <td>Total:</td>
                 <td>{{ ngCart.totalCost() | currency }}</td>
             </tr>
             </tfoot>
             <tbody>
             <tr ng-repeat="item in ngCart.getCart().items track by $index">
-                <td><img src=""><span ng-click="ngCart.removeItemById(item.getId())" >Remove</span></td>
+
+                <td><img src="images/x.png" height="15" length = "15" ng-click="ngCart.removeItemById(item.getId())"></td>
 
                 <td>{{ item.getName() }}</td>
-                <td><span  ng-class="{'disabled':item.getQuantity()==1}"
-                          ng-click="item.setQuantity(-1, true)">-</span>&nbsp;&nbsp;
+
+                <td><img src="images/minus.jpg"  height="15" length = "15" ng-class="{'disabled':item.getQuantity()==1}"
+                         ng-click="item.setQuantity(-1, true)">&nbsp;&nbsp;
                     {{ item.getQuantity() | number }}&nbsp;&nbsp;
-                    <span ng-click="item.setQuantity(1, true)">+</span></td>
+                    <img src="images/plus.png"  height="15" length = "15" ng-click="item.setQuantity(1, true)"></td>
+
                 <td>{{ item.getPrice() | currency}}</td>
+
                 <td>{{ item.getTotal() | currency }}</td>
             </tr>
             </tbody>
