Se arreglo el directorio de las Imagenes

--- a/tienditaColegial/app/header/header.template.html
+++ b/tienditaColegial/app/header/header.template.html
@@ -1,7 +1,7 @@
 <div layout="column" ng-cloak="" class="headerInfo" >
   <md-toolbar class="headerToolbar">
     <div class="md-toolbar-tools" ng-controller="headerCtrl">
-      <img src = "images/Bulldog-paw.jpg" height="40" length = "40"/>
+      <img src = "images/Banners/Bulldog-paw.jpg" height="40" length = "40"/>
       <h1>
         <span>LIBRERIA COLEGIAL</span>
       </h1>
