--- a/tienditaColegial/app/cart/cart.template.html
+++ b/tienditaColegial/app/cart/cart.template.html
@@ -4,7 +4,7 @@
 
     <div flex="15"></div>
     <div flex="" >
-        <h2>Cart<span><hr></span></h2>
+        <h2>Carrito<span><hr></span></h2>
 
         <ngcart-cart></ngcart-cart>
         <br><br><br>
