Anadi los banners , dummy data de camisas y se arreglo CSS

--- a/tienditaColegial/app/ropa/ropa.template.html
+++ b/tienditaColegial/app/ropa/ropa.template.html
@@ -1,7 +1,14 @@
 
 
 
+
+
+
 <h1> Ropa </h1>
-<p>
-    Aqui va la ropa
-</p>
+
+<div class = "ropaPage">
+    <img class = "camisas-image" ng-src= "images/Banners/CamisasBanner.jpg" height = "300" width = "352" >
+    <img class = "pantalones-image" ng-src= "images/Banners/pantalonesBanner.jpg" height = "300" width = "352" >
+    <img class = "gorras-image" ng-src= "images/Banners/GorrasBanner.jpg" height = "300" width = "352" >
+</div>
+
