checkout page take #20

--- a/tienditaColegial/app/index.html
+++ b/tienditaColegial/app/index.html
@@ -66,6 +66,11 @@
   <script src="new-arrivals/new-arrivals.module.js"></script>
   <script src="new-arrivals/new-arrivals.component.js"></script>
 
+  <script src="checkout/checkout.module.js"></script>
+  <script src="checkout/checkout.component.js"></script>
+
+  <script src="payed/payed.module.js"></script>
+  <script src="payed/payed.component.js"></script>
 
 
   <script src="app.module.js"></script>
