--- a/tienditaColegial/app/ropa/ropa.template.html
+++ b/tienditaColegial/app/ropa/ropa.template.html
@@ -7,8 +7,10 @@
 <h1> Ropa </h1>
 
 <div class = "ropaPage">
-    <img class = "camisas-image" ng-src= "images/Banners/CamisasBanner.jpg" height = "300" width = "352" >
-    <img class = "pantalones-image" ng-src= "images/Banners/pantalonesBanner.jpg" height = "300" width = "352" >
-    <img class = "gorras-image" ng-src= "images/Banners/GorrasBanner.jpg" height = "300" width = "352" >
+    <a href = "#!/camisas"> <img class = "camisas-image" ng-src= "images/Banners/CamisasBanner.jpg" height = "300" width = "352" > </a>
+
+    <a href = "#!/pantalones"> <img class = "pantalones-image" ng-src= "images/Banners/pantalonesBanner.jpg" height = "300" width = "352" > </a>
+
+    <a href = "#!/gorras"> <img class = "gorras-image" ng-src= "images/Banners/GorrasBanner.jpg" height = "300" width = "352" > </a>
 </div>
 
