--- a/tienditaColegial/app/index.html
+++ b/tienditaColegial/app/index.html
@@ -72,14 +72,14 @@
   <script src="payed/payed.module.js"></script>
   <script src="payed/payed.component.js"></script>
 
-  <script src="camisas/camisas.module.js"></script>
-  <script src="camisas/camisas.component.js"></script>
+  <script src="ropa/camisas/camisas.module.js"></script>
+  <script src="ropa/camisas/camisas.component.js"></script>
 
-  <script src="pantalones/pantalones.module.js"></script>
-  <script src="pantalones/pantalones.component.js"></script>
+  <script src="ropa/pantalones/pantalones.module.js"></script>
+  <script src="ropa/pantalones/pantalones.component.js"></script>
 
-  <script src="gorras/gorras.module.js"></script>
-  <script src="gorras/gorras.component.js"></script>
+  <script src="ropa/gorras/gorras.module.js"></script>
+  <script src="ropa/gorras/gorras.component.js"></script>
 
 
   <script src="app.module.js"></script>
