--- a/tienditaColegial/app/books/books.template.html
+++ b/tienditaColegial/app/books/books.template.html
@@ -1,2 +1,47 @@
+<md-content layout-gt-sm="row" layout-padding="">
 
-<h1> Books </h1>
+    <div flex="15"></div>
+    <div flex="" >
+        <h2>Articulos Escolares<span><hr></span></h2>
+
+        <br><br><br>
+
+
+
+        <div  layout="row" layout-align="space-around center" ng-controller="booksController">
+            <div class = "item" ng-repeat="book in books">
+                <img src="{{book.imageUrl}}" height="262 " length = 300>
+                <p>${{book.price}}</p>
+                <ngcart-addtocart id="{{book.id}}" name="{{book.name}}" price="{{book.price}}" quantity="1" quantity-max="5">
+                    Add to Cart
+                </ngcart-addtocart>
+            </div>
+        </div>
+    </div>
+    <div flex="15"></div>
+
+</md-content>
+
+
+
+
+
+<script type="text/ng-template" id="template/ngCart/addtocart.html">
+    <div ng-hide="attrs.id">
+        <a class="btn btn-lg btn-primary" ng-disabled="true" ng-transclude></a>
+    </div>
+    <div ng-show="attrs.id">
+        <div>
+    <span ng-show="quantityMax">
+      <select name="quantity" id="quantity" ng-model="q" ng-options=" v for v in qtyOpt"></select>
+    </span>
+            <md-button class="md-primary md-raised">
+                <a style="color: #0f0f0f;" ng-click="ngCart.addItem(id, name, price, q, data)" ng-transclude></a>
+            </md-button>
+        </div>
+        <span ng-show="inCart()">
+
+  <p class="alert alert-info">This item is in your cart. <a ng-click="ngCart.removeItemById(id)" style="cursor: pointer; color: orange">Remove</a></p>
+  </span>
+    </div>
+</script>
