--- a/tienditaColegial/app/ropa/camisas/camisas.template.html
+++ b/tienditaColegial/app/ropa/camisas/camisas.template.html
@@ -1,24 +1,22 @@
-<md-content layout-gt-sm="row" layout-padding="">
+<md-content flex-offset="5">
 
-    <div flex="15"></div>
-    <div flex="" >
-        <h2>Camisas<span><hr></span></h2>
+   <h2>Camisas<span><hr></span></h2>
 
         <br><br><br>
 
 
 
-        <div layout="row" layout-align="space-around center" ng-controller="camisasController">
-            <div ng-repeat="camisa in camisas">
+        <div layout="row" layout-wrap ng-controller="camisasController">
+            <div flex="30" ng-repeat="camisa in camisas">
                 <img src="{{camisa.imageUrl}}" height="262" length = 200>
                 <p>${{camisa.price}}</p>
                 <ngcart-addtocart id="{{camisa.id}}" name="{{camisa.name}}" price="{{camisa.price}}" quantity="1" quantity-max="5">
                     Add to Cart
                 </ngcart-addtocart>
+                <br><br>
             </div>
         </div>
-    </div>
-    <div flex="15"></div>
+
 
 </md-content>
 
