Final edition of phase 1

--- a/tienditaColegial/app/account/account.template.html
+++ b/tienditaColegial/app/account/account.template.html
@@ -7,7 +7,7 @@
     <div flex="40">
     <form action="/" id="Login">
     <div layout="column">
-      <h2>INICIAR SESION</h2>
+      <h2>INICIAR SESION<span><hr></span></h2>
 
       <md-input-container>
         <label>Nombre de Usuario</label>
