--- a/tienditaColegial/app/ropa/ropa.template.html
+++ b/tienditaColegial/app/ropa/ropa.template.html
@@ -2,9 +2,9 @@
 
 
 
+<md-content flex-offset="5">
 
-
-<h1> Ropa </h1>
+<h2> Ropa <span><hr></span></h2>
 
 <div class = "ropaPage">
     <a href = "#!/camisas"> <img class = "camisas-image" ng-src= "images/Banners/CamisasBanner.jpg" height = "300" width = "352" > </a>
@@ -14,3 +14,4 @@
     <a href = "#!/gorras"> <img class = "gorras-image" ng-src= "images/Banners/GorrasBanner.jpg" height = "300" width = "352" > </a>
 </div>
 
+</md-content>
