--- a/tienditaColegial/app/home-page/home-page.template.html
+++ b/tienditaColegial/app/home-page/home-page.template.html
@@ -1,6 +1,6 @@
 
 <div class = "home-page">
-    <h1> Inicio </h1>
+    <h2> Inicio <span><hr></span></h2>
 <img class = "home-image" ng-src= "images/Banners/Inicio-Banner.jpg" height = "450" with = "1100" >
 
 <div class = "recientes-fav" >
@@ -25,3 +25,4 @@
 
 
     </div>
+
