--- a/tienditaColegial/app/top-sellers/top-sellers.template.html
+++ b/tienditaColegial/app/top-sellers/top-sellers.template.html
@@ -1,10 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1> Mas vendidos</h1>
-</body>
-</html>
+<md-content flex-offset="5" >
+    <h2>Mas vendidos <span><hr></span></h2>
+
+
+
+    <br><br><br>
+
+
+
+    <div layout="row" layout-wrap  ng-controller="topSellersController">
+        <div flex="30" ng-repeat="topSeller in topSellers">
+            <img src="{{topSeller.imageUrl}}" height="262 " length = 300>
+            <p>${{topSeller.price}}</p>
+            <ngcart-addtocart id="{{topSeller.id}}" name="{{topSeller.name}}" price="{{topSeller.price}}" quantity="1" quantity-max="5">
+                Add to Cart
+            </ngcart-addtocart>
+            <br><br>
+        </div>
+    </div>
+
+    <div flex="5"></div>
+
+</md-content>
+
+
+
+
+
+<script type="text/ng-template" id="template/ngCart/addtocart.html">
+    <div ng-hide="attrs.id">
+        <a class="btn btn-lg btn-primary" ng-disabled="true" ng-transclude></a>
+    </div>
+    <div ng-show="attrs.id">
+        <div>
+    <span ng-show="quantityMax">
+      <select name="quantity" id="quantity" ng-model="q" ng-options=" v for v in qtyOpt"></select>
+    </span>
+            <md-button class="md-primary md-raised">
+                <a style="color: #0f0f0f;" ng-click="ngCart.addItem(id, name, price, q, data)" ng-transclude></a>
+            </md-button>
+        </div>
+        <span ng-show="inCart()">
+
+  <p class="alert alert-info">This item is in your cart. <a ng-click="ngCart.removeItemById(id)" style="cursor: pointer; color: orange">Remove</a></p>
+  </span>
+    </div>
+</script>
